--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   	"underscore" : ">=1.5.2",
   	"moment" : ">=2.5.0",
   	"nodeunit" : ">=0.8.2",
-  	"priorityqueuejs" : "0.1.0",
+  	"priorityqueuejs" : "0.1.0"
   },
 "repository" :
   { "type" : "git",
